src/BlazorUI/Demo/Client/Core/Shared/Footer.razor.scss
@import '../Styles/abstracts/_functions.scss';
@import '../Styles/abstracts/_media-queries.scss';
@import '../Styles/abstracts/_bit-css-variables.scss';

footer {
    width: 100%;
    display: flex;
    align-items: center;
    box-sizing: border-box;
    flex-flow: column nowrap;
    justify-content: flex-start;
    background-color: $bit-color-background-secondary;
}

section {
    width: 100%;
    position: relative;
    max-width: rem2(1200px);
    box-sizing: border-box;
    padding: rem2(40px) rem2(20px) rem2(80px);

    &:first-child {
        display: grid;
        grid-auto-columns: 1fr;
        grid-template-columns: 1fr 1fr;
        align-items: center;
        justify-content: space-between;
        gap: rem2(40px);
        grid-template-rows: auto;

        @include lg {
            grid-template-columns: 1fr 1.75fr;
        }
    }

    &:last-child {
        display: flex;
        align-items: center;
        padding: rem2(40px) rem2(20px);
        justify-content: space-between;
        border-top: rem2(1px) solid $bit-color-border-secondary;

        @include sm {
            align-items: center;
            flex-flow: column nowrap;
            justify-content: flex-start;
        }
    }

    @include md {
        padding-left: rem2(30px);
        padding-right: rem2(30px);
    }
}

.bit-logo {
    width: rem2(32px);
    height: rem2(27px);
    margin-bottom: rem2(20px);
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-image: url('images/bit-logo.svg');
}

.go-to-top {
    bottom: 0;
    right: rem2(2px);
    cursor: pointer;
    position: absolute;
    padding: rem2(8px) rem2(12px);
    color: #EEEE;
    background-color: #888;
}

a {
    text-decoration: none;
}

.address-info {
    display: flex;
    flex-flow: column nowrap;
    gap: rem2(3px);

    @include sm {
        margin-bottom: rem2(30px);
    }

    .address, .tel, .country {
        padding-left: rem2(20px);
        background-repeat: no-repeat;
        background-position-y: rem2(4px);
    }

    .address, .tel {
        color: #3E5060;

        &:hover {
            color: #4A5AAB;
        }
    }

    .address {
        background-image: url('images/footer/location-icon.svg');
    }

    .country {
        /*font-weight: 600;*/
    }

    .tel {
        background-image: url('images/footer/tel-icon.svg');
    }
}

.links-container {
    gap: 20px;
    display: grid;
    grid-auto-columns: 1fr;
    grid-template-columns: 1fr 1fr;
}

.column {
    height: 100%;
    display: flex;
    align-items: flex-start;
    flex-flow: column nowrap;
    justify-content: flex-start;
}

.col-title {
    margin: 0;
    color: #1A2027;
    line-height: 1.5;
    font-weight: 700;
    letter-spacing: 0;
    font-size: rem2(14px);
}

.footer-link {
    margin-top: rem2(10px);
    color: #3E5060;
    font-size: rem2(14px);
    line-height: 1.5;
    letter-spacing: 0;
    font-weight: 400;
    text-decoration: none;

    &:hover {
        color: #007FFF;
        text-decoration: underline;
    }
}

.copy-right-txt {
    font-size: rem2(14px);
    line-height: 1.5;
    letter-spacing: 0;
    font-weight: 400;
    color: #3E5060;
    margin-top: rem2(16px);
}

.social-link-group {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;

    @include sm {
        margin-bottom: rem2(8px);
    }


    .social-link {
        cursor: pointer;
        width: rem2(32px);
        height: rem2(32px);
        margin: 0 rem2(10);
        border-radius: 50%;
        background-color: #888;
        background-size: rem2(18px);
        background-position: center;
        background-repeat: no-repeat;
    }

    .twitter-link {
        background-image: url('images/footer/twitter-icon.svg');

        &:hover {
            background-color: #1DA1F2;
        }
    }

    .github-link {
        background-image: url('images/footer/github-icon.svg');

        &:hover {
            background-color: #000;
        }
    }

    .youtube-link {
        background-image: url('images/footer/youtube-icon.svg');

        &:hover {
            background-color: #FF0000;
        }
    }

    .linkedin-link {
        background-image: url('images/footer/linkedin-icon.svg');

        &:hover {
            background-color: #0077B5;
        }
    }
}

